--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,13 +21,13 @@ jobs:
       # 3) 백엔드 이미지 빌드 & 푸시
       - name: Build & Push Backend
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/realtime-backend:latest ./backend
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/realtime-backend:latest ./be
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/realtime-backend:latest
 
       # 4) 프론트엔드 이미지 빌드 & 푸시
       - name: Build & Push Frontend
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/realtime-frontend:latest ./frontend
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/realtime-frontend:latest ./fe
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/realtime-frontend:latest
 
   deploy:
