--- a/fe/nginx/default.conf
+++ b/fe/nginx/default.conf
@@ -1,27 +1,18 @@
 server {
     listen 80;
 
-    # 서버 이름 설정
-    server_name 43.203.119.186;
-
     # React 정적 파일 서빙
     location / {
-        root   /usr/share/nginx/html;  # React 빌드 결과 경로
-        index  index.html;
-        try_files $uri /index.html;   # React 라우팅
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 
-    # /api 경로로 들어오는 요청을 백엔드로 프록시
+    # /api 요청은 백엔드로 프록시
     location /api/ {
         proxy_pass http://backend:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # 보안 헤더 추가
-    add_header X-Frame-Options "DENY";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
 }
