--- a/fe/nginx/default.conf
+++ b/fe/nginx/default.conf
@@ -1,18 +1,21 @@
 server {
+    # 80 포트 리스닝
     listen 80;
+    # 도메인이 없으므로 server_name은 생략하거나 IP/localhost 써도 됨
+    # server_name 43.203.119.186;
 
     # React 정적 파일 서빙
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
+        # React 빌드 결과물이 /usr/share/nginx/html 에 있다고 가정
+        root   /usr/share/nginx/html;
+        try_files $uri /index.html;  # 리액트 라우팅 대비
     }
 
-    # /api 요청은 백엔드로 프록시
+    # /api 로 들어오는 요청은 백엔드로 프록시
+    # (docker-compose에서 backend 서비스 이름이 'backend'라고 할 때)
     location /api/ {
         proxy_pass http://backend:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
