feat: 소셜 로그인 기능 구현

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -2,4 +2,12 @@ spring.application.name=be
 spring.profiles.include = mysql
 server.port=4040
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://realtime-mysql.cl0gaao00kl6.ap-northeast-2.rds.amazonaws.com:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+sns.google.url=${SNS_GOOGLE_URL}
+sns.google.client.id=${SNS_GOOGLE_CLIENT_ID}
+sns.google.client.secret=${SNS_GOOGLE_CLIENT_SECRET}
+sns.google.callback.url=${SNS_GOOGLE_CALLBACK_URL}
+sns.google.token.url=${SNS_GOOGLE_TOKEN_URL}
