--- a/be/build.gradle
+++ b/be/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	// Jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
