--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+
   datasource:
     url: ${DB_URL}
     username: ${DB_USER}
@@ -16,14 +17,6 @@ spring:
     open-in-view: false
     generate-ddl: true
     show-sql: true
-
-  jwt:
-    secret: ${JWT_SECRET}
-    redirect: ${JWT_REDIRECT_URI}
-    access-token:
-      expiration-time: ${ACCESS_TOKEN_EXPIRATION_TIME}
-    refresh-token:
-      expiration-time: ${REFRESH_TOKEN_EXPIRATION_TIME}
 
   sql:
     init:
@@ -74,3 +67,10 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+jwt:
+  secret: ${JWT_SECRET}
+  redirect: ${JWT_REDIRECT_URI}
+  access-token:
+    expiration-time: ${ACCESS_TOKEN_EXPIRATION_TIME:3600000}
+  refresh-token:
+    expiration-time: ${REFRESH_TOKEN_EXPIRATION_TIME}
