--- a/fe/package.json
+++ b/fe/package.json
@@ -6,11 +6,10 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "react-router-dom": "^6.22.3"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
