--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.17",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
