--- a/be/build.gradle
+++ b/be/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	// 시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
